--- a/pom.xml
+++ b/pom.xml
@@ -42,5 +42,10 @@
           <artifactId>testng</artifactId>
           <version>6.9.9</version>
       </dependency>
+      <dependency>
+          <groupId>junit</groupId>
+          <artifactId>junit</artifactId>
+          <version>4.12</version>
+      </dependency>
   </dependencies>
 </project>
